# pedalboard-sw

sw-arduino/ardu/: ardu.ino
sw-cpp/: .gitignore  CMakeLists.txt  arduino.cpp  arduino.hpp  logger.cpp  logger.hpp  middleware.cpp  zoomg3xn.cpp  zoomg3xn.hpp
sw-cpp/include/: CMakeLists.txt
sw-python/: arduino.py  logger.py  middleware.py  zoomg3xn.py
sw-rust/: Cargo.toml
